--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@ header .themeSelector .activeTheme {
   border: 1px solid #eaeaea;
   border-radius: 5px;
   font-size: 17px;
+  width: 100%;
 }
 
 .addTask form input:focus {
